<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/_8dp"
              android:paddingTop="@dimen/_8dp"
              android:paddingStart="3dp"
              android:background="@color/color_gray_70"
              android:orientation="vertical">
    <ImageView
            android:layout_width="35dp"
            android:layout_height="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bg_rounded_8dp"/>
    <TextView
            android:id="@+id/popup_song_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:paddingStart="12dp"
            android:text="@string/play"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    <TextView
            android:id="@+id/popup_song_play_next"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:text="@string/play_next"
            android:textStyle="bold"
            android:paddingLeft="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    <TextView
            android:id="@+id/popup_song_addto_queue"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:text="@string/add_to_queue"
            android:paddingLeft="12dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    <TextView
            android:id="@+id/popup_song_addto_playlist"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:text="@string/add_to_playlist"
            android:paddingLeft="12dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    <TextView
            android:id="@+id/popup_song_goto_album"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:text="@string/go_to_album"
            android:paddingLeft="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    <TextView
            android:id="@+id/popup_song_goto_artist"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:text="@string/go_to_artist"
            android:paddingLeft="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="#66333333"/>
    <TextView
            android:id="@+id/textDownload"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_16dp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/white"
            android:gravity="start|center_vertical"
            android:text="@string/title_download"
            android:paddingLeft="12dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

</LinearLayout>